# sdio_read_write

./: .clangd  .gitignore  .mxproject  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  sdio_read_write.ioc  stm32f103vetx_flash.ld
Core/Inc/: main.h  sdio.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: dma.c  gpio.c  main.c  rtc.c  sdio.c  stm32f1xx_it.c  tim.c  usart.c
FATFS/App/: fatfs.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
sdio/: hal_sdio.c  hal_sdio.h
